--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
