feat: add auth - ai chat - api to binance tool for api

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ dist-ssr
 # Exclude npm package-lock as this project uses yarn
 package-lock.json
 package-lock.json
+
+
+# amplify
+node_modules
+.amplify
+amplify_outputs*
+amplifyconfiguration*
