fix deployment issue by adding back the commands:             - amplify generate outputs --output-path=./amplify_outputs.json amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,7 @@ applications:
             - yarn install
         build:
           commands:
+            - amplify generate outputs --output-path=./amplify_outputs.json
             - yarn build
       artifacts:
         baseDirectory: dist
