--- a/amplify.yml
+++ b/amplify.yml
@@ -1,21 +1,25 @@
 version: 1
-applications:
-  - frontend:
-      phases:
-        preBuild:
-          commands:
-            - nvm use 20
-            - yarn install
-        build:
-          commands:
-            - amplify generate outputs --output-path=./amplify_outputs.json
-            - yarn build
-      artifacts:
-        baseDirectory: dist
-        files:
-          - "**/*"
-      cache:
-        paths:
-          - node_modules/**/*
-          - dist/**/*
-    appRoot: .
+backend:
+  phases:
+    # IMPORTANT - Please verify your build commands
+    build:
+      commands:
+        - amplifyPush --simple
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - nvm use 20
+        - yarn
+    build:
+      commands:
+        # Generate amplify outputs file during build
+        - amplify env get --json --name $AWS_BRANCH > ./amplify_outputs.json || echo "No amplify env found"
+        - yarn build
+  artifacts:
+    baseDirectory: dist
+    files:
+      - "**/*"
+  cache:
+    paths:
+      - node_modules/**/*
