--- a/amplify.yml
+++ b/amplify.yml
@@ -11,40 +11,10 @@ frontend:
       commands:
         - nvm use 20
         - yarn
-        # Create a more complete config that includes auth settings
-        - |
-          echo '{
-            "auth": {
-              "user_pool_id": "eu-west-2_Lnpv8PpZ9",
-              "aws_region": "eu-west-2",
-              "user_pool_client_id": "5gcd3psg8eku3h2u3ro2oto9n2",
-              "identity_pool_id": "eu-west-2:bb9541a9-eb31-407b-9313-6d5f119d97c6"
-            },
-            "data": {
-              "url": "https://mpnk7jya5fbddlafko7royvsya.appsync-api.eu-west-2.amazonaws.com/graphql",
-              "aws_region": "eu-west-2",
-              "api_key": "da2-wuqj3qyirjeblgmowt42fpbunq",
-              "default_authorization_type": "AMAZON_COGNITO_USER_POOLS"
-            },
-            "ai": {
-              "conversation": {
-                "chat": {
-                  "model": "anthropic.claude-3-haiku-20240307-v1:0",
-                  "provider": "bedrock"
-                }
-              },
-              "generation": {
-                "text": {
-                  "model": "anthropic.claude-3-haiku-20240307-v1:0",
-                  "provider": "bedrock"
-                }
-              }
-            }
-          }' > ./amplify_outputs.json
     build:
       commands:
-        # Try to get Amplify outputs, but use the fallback if it fails
-        - amplify env get --json --name $AWS_BRANCH > ./amplify_outputs.json || echo "Using default config file"
+        # Generate outputs file from deployed environment's outputs
+        - amplify env get --json --name $AWS_BRANCH > ./amplify_outputs.json
         - yarn build
   artifacts:
     baseDirectory: dist
