--- a/amplify.yml
+++ b/amplify.yml
@@ -11,12 +11,12 @@ frontend:
       commands:
         - nvm use 20
         - yarn
-        # Create a basic structure for amplify_outputs.json in case env get fails
-        - echo '{"version":"1"}' > ./amplify_outputs.json
+        # Create valid TypeScript-compatible JSON file structure
+        - echo '{"version":"1","auth":{"user_pool_id":"","aws_region":"eu-west-2"},"data":{"url":"","aws_region":"eu-west-2"},"ai":{"aws_region":"eu-west-2"}}' > ./amplify_outputs.json
     build:
       commands:
-        # Generate outputs file from deployed environment's outputs and build
-        - amplify env get --name $AWS_BRANCH > ./amplify_outputs.json || echo "Unable to get environment info - using default outputs"
+        # Generate outputs file with proper JSON formatting for TypeScript
+        - amplify env get --json --name $AWS_BRANCH > ./amplify_outputs.json || echo "Unable to get environment info - using default outputs"
         - yarn build
   artifacts:
     baseDirectory: dist
