--- a/amplify.yml
+++ b/amplify.yml
@@ -13,25 +13,29 @@ frontend:
         - yarn
     build:
       commands:
-        # Generate the correct AI configuration structure
+        # Generate the correct AI configuration structure for Gen 2
         - |
           cat << EOF > ./amplify_outputs.json
           {
-            "version": "1",
-            "auth": {
-              "user_pool_id": "eu-west-2_Lnpv8PpZ9",
-              "aws_region": "eu-west-2",
-              "user_pool_client_id": "5gcd3psg8eku3h2u3ro2oto9n2",
-              "identity_pool_id": "eu-west-2:bb9541a9-eb31-407b-9313-6d5f119d97c6"
+            "version": "1.0",
+            "Auth": {
+              "Cognito": {
+                "userPoolId": "eu-west-2_Lnpv8PpZ9",
+                "userPoolClientId": "5gcd3psg8eku3h2u3ro2oto9n2",
+                "identityPoolId": "eu-west-2:bb9541a9-eb31-407b-9313-6d5f119d97c6",
+                "region": "eu-west-2"
+              }
             },
-            "data": {
-              "url": "https://mpnk7jya5fbddlafko7royvsya.appsync-api.eu-west-2.amazonaws.com/graphql",
-              "aws_region": "eu-west-2",
-              "api_key": "da2-wuqj3qyirjeblgmowt42fpbunq",
-              "default_authorization_type": "AMAZON_COGNITO_USER_POOLS"
+            "API": {
+              "GraphQL": {
+                "endpoint": "https://mpnk7jya5fbddlafko7royvsya.appsync-api.eu-west-2.amazonaws.com/graphql",
+                "region": "eu-west-2",
+                "apiKey": "da2-wuqj3qyirjeblgmowt42fpbunq",
+                "defaultAuthMode": "userPool"
+              }
             },
             "ai": {
-              "aws_region": "eu-west-2",
+              "region": "eu-west-2",
               "conversation": {
                 "chat": {
                   "model": "anthropic.claude-3-haiku-20240307-v1:0",
@@ -39,6 +43,33 @@ frontend:
                   "region": "eu-west-2"
                 }
               }
+            }
+          }
+          EOF
+        # Add diagnostic logging to help troubleshoot AI issues
+        - |
+          cat << EOF >> ./src/client.ts
+
+          // Add diagnostic logging for AI configuration
+          export async function logAIConfigDetails() {
+            try {
+              console.info('🔍 AI Configuration Details:', {
+                aiRegion: Amplify.getConfig().AI?.region || 'not configured',
+                conversationConfig: Amplify.getConfig().AI?.conversation || 'not configured',
+                authStatus: 'Checking...'
+              });
+              
+              try {
+                const authSession = await fetchAuthSession();
+                console.info('🔐 Auth Session Valid:', !!authSession.tokens?.accessToken);
+              } catch (authErr) {
+                console.error('❌ Auth Session Error:', authErr);
+              }
+              
+              return true;
+            } catch (err) {
+              console.error('❌ AI Config Diagnostic Error:', err);
+              return false;
             }
           }
           EOF
