--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "aws-cdk-lib": "2.189.1",
+    "aws-cdk-lib": "^2.195.0",
     "constructs": "^10.0.0",
     "esbuild": "^0.25.4",
     "eslint": "^9.22.0",
