--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
   },
   "dependencies": {
-    "@aws-amplify/backend": "^1.16.1",
-    "@aws-amplify/backend-cli": "^1.7.1",
     "@aws-amplify/ui-react": "^6.11.1",
     "@aws-amplify/ui-react-ai": "^1.4.1",
     "@types/d3": "^7.4.3",
     "aws-amplify": "^6.14.4",
     "d3": "^7.9.0",
     "framer-motion": "^12.9.4",
+    "glob": "^10.4.5",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.7.2",
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "aws-cdk-lib": "^2.195.0",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.189.1",
+    "constructs": "^10.4.2",
     "esbuild": "^0.25.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "tsx": "^4.19.4",
-    "typescript": "^5.0.0",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
   }
