--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,10 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - npm install -g @aws-amplify/cli
+        - npx ampx generate
 frontend:
   phases:
     preBuild:
