--- a/amplify.yml
+++ b/amplify.yml
@@ -3,8 +3,8 @@ backend:
   phases:
     build:
       commands:
-        - npm install -g @aws-amplify/cli
-        - npx ampx generate outputs
+        - npm install -g @aws-amplify/backend-cli
+        - npx ampx generate
 frontend:
   phases:
     preBuild:
