--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ backend:
       commands:
         - nvm install 22
         - nvm use 22
-        - npm install -g @aws-amplify/backend-cli
+        - npm install -g @aws-amplify/backend-cli --force
         - npx ampx generate
 frontend:
   phases:
