--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
         - nvm install 22
         - nvm use 22
         - npm install -g @aws-amplify/backend-cli --force
-        - npx ampx generate
+        - npx ampx generate outputs
 frontend:
   phases:
     preBuild:
