--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
         - nvm install 22
         - nvm use 22
         - npm install -g @aws-amplify/backend-cli --force
-        - npx ampx generate outputs
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
