--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ backend:
       commands:
         - nvm install 22
         - nvm use 22
+        - yarn install --frozen-lockfile
         - npm install -g @aws-amplify/backend-cli --force
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
