--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "d3": "^7.9.0",
     "framer-motion": "^12.9.4",
     "glob": "^10.4.5",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
