--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/core": "^6.14.4",
     "@aws-amplify/ui-react": "^6.11.1",
     "@aws-amplify/ui-react-ai": "^1.4.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@types/d3": "^7.4.3",
+    "@types/three": "^0.176.0",
     "aws-amplify": "^6.14.4",
     "d3": "^7.9.0",
     "framer-motion": "^12.9.4",
@@ -21,7 +24,9 @@
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "three": "^0.176.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
